Fixed gap issue for phone users

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 1rem;
 
   & li {
     text-transform: uppercase;
@@ -22,7 +21,7 @@
 
 .contentBox {
   display: flex;
-  gap: 3rem;
+  gap: 2rem;
   justify-content: space-between;
 }
 
